// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test LicenseUsage should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.licenseUsage.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        annotations="[{\\"type\\":\\"html\\",\\"position\\":[\\"50%\\",\\"50%\\"]}]"
        barbackground="{}"
        colorfield="type"
        data="[{\\"type\\":\\"test1\\",\\"percent\\":0.1},{\\"type\\":\\"test2\\",\\"percent\\":0.2},{\\"type\\":\\"test3\\",\\"percent\\":0.3},{\\"type\\":\\"test4\\",\\"percent\\":1},{\\"type\\":\\"test4\\",\\"percent\\":0},{\\"type\\":\\"user\\",\\"percent\\":0.2}]"
        h="2"
        height="184"
        innerradius="0.2"
        locale="zh-CN"
        maxangle="360"
        radius="1"
        theme="light"
        tooltip="{}"
        xfield="type"
        yfield="percent"
      />
    </div>
  </div>
</div>
`;

exports[`test LicenseUsage should match snapshot when environment is qa 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.licenseUsage.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        annotations="[{\\"type\\":\\"html\\",\\"position\\":[\\"50%\\",\\"50%\\"]}]"
        barbackground="{}"
        colorfield="type"
        data="[{\\"type\\":\\"test1\\",\\"percent\\":10},{\\"type\\":\\"test2\\",\\"percent\\":110},{\\"type\\":\\"user\\",\\"percent\\":20}]"
        h="2"
        height="184"
        innerradius="0.2"
        locale="zh-CN"
        maxangle="300"
        radius="1"
        theme="light"
        tooltip="{}"
        xfield="type"
        yfield="percent"
      />
    </div>
  </div>
</div>
`;

exports[`test LicenseUsage should match snapshot when request goes wrong 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.licenseUsage.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-result ant-result-error"
        style="padding: 10px;"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        >
          common.request.noticeFailTitle
        </div>
        <div
          class="ant-result-subtitle"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;
